# AVS

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
avs/: __init__.py  audio_core.py  main.py  mic_thread.py  stream_controller.py
avs/widgets/: main_window.py  stream_controller.py
avs/windows/: __init__.py  main_window.py  options.py
src/: main.py  stream_controller.py
src/windows/: main_window.py  options.py
tests/: test_audio_core.py  test_main.py  test_stream_controller.py
