[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "avs"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "soundcard",
    "pyaudio",
    "scipy",
    "qtpy",
    "pyqtgraph",
    "librosa",
    "pyside6",
    "matplotlib",
]

[dependency-groups]
dev = [
    "ruff",
    "bandit",
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["avs*"]
exclude = [
    "tests*",
    ".github*",
    ".venv*",
    "venv*",
    "build*",
    "dist*",
]