[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "avs"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "soundcard",
    "pyaudio",
    "scipy",
    "qtpy",
    "pyqtgraph",
    "librosa",
    "pyside6",
    "matplotlib",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["avs*"]
exclude = [
    "tests*",
    ".github*",
    ".venv*",
    "venv*",
    "build*",
    "dist*",
]

[tool.coverage.run]
source = ["avs"]
omit = [".venv/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true